# Deep-Past-Challenge

./: .gitignore  AGENTS.md  README.md  README_EN.md  pyproject.toml
.codex/docs/: chatgpt_project_record_split.md  colab_porting_playbook.md  competition_context.md  data_quality_playbook.md  discussion_comments.md  eda_notebooks.md  experiments_log.md  normalization_replacements.md  notebook_digest.md  notebook_naming_rules.md  ops_log.md  public_insights.md  retrospective.md  submission.md  train_csv_curation.md  train_csv_curation_log.md
data/: README.md  expand_train.csv
notebooks/002/: [1-2-2]final-submission-v3.ipynb  [1-2]final-submission-v3.ipynb  [1-3-3-2]final-submission-v3.ipynb  [1-3-3-3]final-submission-v3.ipynb  [1-3-3-4]final-submission-v3.ipynb  [1-3-3]final-submission-v3.ipynb  [1-3-3]final-submission-v4.ipynb  [1-3]final-submission-v3.ipynb  [1-4]final-submission-v3.ipynb  [1-5-2]final-submission-v3.ipynb  [1]dpc-starter-train-cv5  [1]dpc-starter-train-cv5.ipynb  [2-10]dpc-starter-train-v2-colab.ipynb  [2-10]dpc-starter-train-v5-colab.ipynb  [2-10]dpc-starter-train-v6-colab.ipynb  [2-12]dpc-starter-train-v6-colab.ipynb  [2-3]dpc-starter-train-v1.ipynb  [2-3]dpc-starter-train-v2.ipynb  [2-3]dpc-starter-train-v3.ipynb  [2-5]dpc-starter-train-v3.ipynb  [2-6-2]dpc-starter-train-v3.ipynb  [2-6]dpc-starter-train-v3.ipynb  [2-7-2]dpc-starter-train-v3.ipynb  [2-7]dpc-starter-train-v3.ipynb  [2-8-2]dpc-starter-train-v1.ipynb  [2-8]dpc-starter-train-v1.ipynb  [2-8]dpc-starter-train-v2-colab.ipynb  [2]dpc-starter-train-v3.ipynb  (+29 more)
scripts/: byt5_length_stats.py
(+40 files in other folders)
